--- a/机器学习与资产定价.md
+++ b/机器学习与资产定价.md
@@ -1,8 +1,30 @@
 # 引言
 
+预测问题是资产定价的核心。为了给股票定价，投资者必须预测公司未来的现金流。为了找到表现优异的交易策略，投资者会寻找能够预测资产收益率的信号。检验资产定价模型的学者们需寻找能够解释资产收益率（横）截面差异或时序变换的预测变量。信用风险模型需要能够预测违约的变量作为输入。对冲和风险管理模型则需要预测资产收益率之间的共同运动。
+
+在这些应用中，可用于预测的变量数不胜数。技术的进步致使投资者和分析师可获得的信息量呈爆炸式增长。即使我们只看其中的一小部分，即从公司财务报告中提取的数据，数据可得性的增长也是惊人的。
+
+公司财务报告只代表了投资者潜在可获得的一小部分数据。除此之外，记录市场历史价格和交易记录的数据库包含了海量的数据；社交媒体中包含了大量投资者情绪数据；客户和员工的在线点评也可能包含有价值的信息；以及许多其他数据源都有可能和前文提到的预测应用密切相关。
+
+大量潜在的预测变量引发了一个统计问题。例如，考虑预测股票预期收益率截面差异的问题。假设我们能够观测到5000支股票的收益率。而另一方面，我们用来预测收益率差异的变量个数可能会轻而易举地超过股票的数量。在这种情况下，我们还能否有效地估计不同变量和未来收益率之间的关系并以此为基础做出合理的预测呢？
+
+在上述J比N更大的高维设定下，常规的统计方法（例如普通最小二乘（OLS））并不适用。当J>N时，OLS回归的解也不唯一。即使J<N但J并不比N小很多时，OLS估计量通常也无法提供有用的预测。在如此之多的解释变量下，OLS回归会过度拟合数据中的噪声，导致样本内的拟合虽然很好，但是样本外的预测却非常糟糕。
+
 ## 实证资产定价中的特设稀疏性假设
 
+一直以来，资产定价方面的研究都是通过关注低位模型来回避上述高维数问题。例如，在研究截面股票收益率预测时，学者们仅仅在回归中使用少量公司特征作为解释变量。虽然汇总来看，学者们研究了大量公司特征对股票收益率的预测能力；但是在任何一个孤立的研究中，考虑的解释变量的个数通常都非常少。类似地，学者们希望使用包含少数几个因子的多因子模型来捕捉股票收益率截面上的投资机会。在他们的多因子模型中，除了按市值加权的市场投资组合超额收益率之外，只加入了其他三四个因子。这些因子是基于市值、盈利能力、投资水平以及账面市值比这些公司特征构造的投资组合。
+
+鉴于为数众多的变量都可能预测股票收益率以及被拿来构造基于公司特征的因子投资组合这一背景，在研究中仅仅关注很少数量的因子表明学者们在模型中强加了很多稀疏性（sparsity）约束。而一旦学者们施加了稀疏性约束，则意味它将其他成百上千甚至更多的因子对收益率的影响视为零。
+
+在模型中施加如此极端的稀疏性约束能够确保传统的统计方法具有良好的表现。但是使用的稀疏性约束是因人而异的。提出这些多因子模型的学者们仅仅是从大量可选的公司特征中选取了很少的几个，用来构造他们的低维多因子模型。因此，就预测能力而言，我们并不知道这些低维模型比起大量被遗漏因子的联合预测效果要差了多少。不过在这方面，一个颇有意思的现象是，随着时间的推移，学者们开始意识到能充分捕捉股票预期收益截面差异的“标准”因子的个数呈上升趋势。对于在模型中加入越来越多因子这个现象的一种解释是，学术研究正在逐步意识到并慢慢适应先前研究中确实存在遗漏因子的问题。
+
 ## 理论资产定价中的特设稀疏性假设
+
+这些问题不仅与资产定价的实证研究有关，而且还对投资者决策的理论建模提出了挑战。资产价格反映了投资者对未来资产回报的期望。但投资者是如何形成这些期望的呢？现实世界的投资者面临的问题与研究实证资产定价的学者们面临的问题相同，即存在大量潜在有关的预测变量。如何将它们提炼成一个好的预测模型是一个高维问题，而传统的统计方法并不适用。
+
+大多数理论资产定价模型都假设理性预期。这个假设比预期的合理性要强得多。这些模型假设预测模型对于投资者来说是已知的，因此他们无须对其进行估计。更确切地说，这些模型假设投资者完全知晓任何有关的预测变量与他们想要预测的变量之间的函数关系。这意味着，只要给定预测变量的值，投资者就能够计算出被预测变量的条件期望。这种假设背后的动机是源自这样一个想法，即投资者有足够的时间在稳定环境中学习这些函数关系，而模型体现了投资者习得函数关系之后的均衡状态。然而，即便是在低维设定中，我们能否假设投资者的学习过程已经结束都是值得商榷的。事实上，均指出投资者对于数据生成过程参数的学习对于理解资产价格至关重要。在更接近现实的高维环境中，投资者则需要从数以千计的可观测变量中提取预测信息，因此上述投资者已经习得了函数关系这一论点就变得更加没有说服力。
+
+所以，我们应该在理论模型中假设投资者面临着和计量经济学家在研究资产价格时面对的同样的高维数挑战。现有关于投资者学习预测函数及其参数的模型往往假设投资者仅通过少数预测变量进行预测。然而这种稀疏性是由理论模型的研究者处于自身的目的而强加的，并不具备一般性；且似乎也很难证明如此系数表达能够充分反映现实世界中的投资者所处的预测环境。投资者在理论模型中面临的预测问题的难度，与在现实世界中面对的预测问题的难度之间的不匹配，可能是导致现有理论资产定价在实证方面的表现难以令人满意的原因。
 
 ## 机器学习
 
@@ -14,17 +36,87 @@
 
 ## 本书的结构
 
+本书其余部分的结构如下。第2章简要概述了一些基本的监督学习方法。这一章首先回顾了旨在预测连续变量的回归方法，包括岭回归、Lasso回归、决策树和随机森林及神经网络。其中一些学习算法需要在实际估计之前首先设置算法的超参数。这一章讨论了如何通过数据驱动的方法来调整这些超参数，以达到最优化学习算法预测性能的目的。超参数通常控制在估计过程中施加正则化的强弱程度。第2章的最后将简要讨论正则化的贝叶斯解释。在这种解释下，正则化可以被理解为对模型参数施加了某些先验分布。我们在后续章节中将使用这种贝叶斯解释，把经济学推理和先验知识注入对资产定价的机器学习方法设计中。
+
+第3章探讨了在资产定价中应用机器学习方法时会遭遇的挑战。这一章首先指出资产定价中典型的数据性质和适用于大多数机器学习算法的数据的性质之间存在巨大的差异。贯穿整章，我将通过一个具体的实证例子来阐明其中一些问题。这个实证分析使用每支股票自己的历史价格作为预测性信息来预测截面收益率。本章想要强调，虽然机器学习方法非常适合被用来分析资产定价中的预测问题，但唯有在对它们进行了重要的调整之后，它们才有可能在预测问题中发挥出最好的效果。很多在典型机器学习应用中（例如在技术或生物统计学领域的应用）有效的方法，在资产定价的应用中则不一定有用。在诸多因素中，资产定价应用中的低信噪比意味着指望在不加约束的灵活框架下仅仅依靠数据自己发声的做法不太可能取得很好的结果。因此，我们将不得不对学习算法施加一些结构性约束。为此，需要将机器学习方法与资产定价和投资者组合选择的基本经济学框架联系起来，而贝叶斯统计中的一些原则对于建立这种联系很有帮助。
+
+关于这方面的研究进展，第4章给出了一个例子。它的出发点是股票市场中不应该存在近似无风险套利的机会，并在这一假设下求解最基本的均值-方差投资组合优化问题，这个问题也可以被等价地表达为如何通过资产收益率地线性组合构造随机贴现因子。通过指定关于市场中风险和收益机会的贝叶斯先验分布，该研究框架允许我们在收益率预测问题中加入具有经济学动机的约束条件。这种方法产生的估计量类似于机器学习应用中常见的弹性网估计量，但又和后者存在一些重要的差异。这种差异是由于前者考虑了预测误差的协方差是投资组合风险收益特征的重要决定因素。在该估计量的实证应用中，我们使用了众多公司特征以及它们的非线性变换（包括特征之间的两两交互作用）作为收益率预测变量。实证结果证明，施加具有经济学动机的先验分布对于在样本外获得良好的预测性能至关重要。
+
+第5章从理论角度展开论述。前面的章节表明，在针对金融市场数据进行统计分析时需要应对高维环境问题，而机器学习方法为此提供了丰富的工具。但是，统计分析中使用的资产价格是由投资者的投资决策决定的，他们的情况又如何呢？如果金融市场的信息环境导致预测问题是高维的，那么金融市场模型中的投资者理应同样面对这种高维问题。因此，机器学习方法为在理论模型中对投资者信念形成过程建模提供了一个有吸引力的蓝图。第5章讨论了这一方法。为了关注最根本的问题，我们考虑一个简单的情况，即投资者必须从历史数据中学习股票现金流作为预测变量的大量公司特征之间的关系。此外，投资者被认为是贝叶斯主义者，因而会把预测模型给出的估计值朝着客观正确的先验分布进行收缩。在均衡状态下，股票的定价满足收益率在样本外不可预测。然而，在事后统计分析中，收益率在样本内却具有很强的可预测性。这个矛盾是因为计量经济学家在事后进行样本内数据分析时具有事后知识优势，而这种知识是在实时投资环境中的投资者所不具备的。在低维环境中，计量经济学家的这种隐含优势可能很小，但它在高维环境中却很大。因此，当我们试图从资产价格数据中推断出风险溢价或投资者行为偏差的影响时，使用样本内数据回归是不合适的。
+
+第6章勾勒了今后进一步将机器学习应用于资产定价的研究议程，并以此总结全书。
+
 # 监督学习
+
+在本章中，我将简要介绍监督学习方法。关于这个话题的文献数量庞大且快速发展，因而本章的介绍并非一个全面的综述。我的目标并非详细解释监督学习领域的所有方法，而是将重点放在那些对于资产定价非常有用的技术的基本要素上。本书后面的章节将通过探究资产定价应用来对其中的一些方法进行更加详尽的说明。
+
+## 结束语
+
+本章讨论了在资产定价领域使用监督学习方法时会遇到的几项根本问题。机器学习方法在很多方面的确适用于学术界资产定价研究和金融业界量化投资管理中的预测问题。本章着重讨论了截面资产收益率的预测问题，但是监督学习方法在资产定价领域的其他问题中也能发挥很大的作用。比如，这些问题包括预测资产现金流而非收益率、预测信贷风险以及寻找近似完美的风险对冲策略。
+
+本章的讨论想强调的是，尽管机器学习技术很有帮助，但人们必须仔细思考如何使机器学习方法适应资产定价应用中的特定条件；如若只是生硬照搬现成的方法，则难以产生好的结果。在许多方面，资产定价领域的预测问题斗鱼机器学习方法擅长处理的其他预测问题有很大的差异。有时，一些看上去平淡无奇的问题（liru ruhe zai shuju chulizhong dui yuce bianliang jinxing 尺度方所）都会对监督学习算法的预测性能产生很大的影响。
+
+不同机器学习方法之间的选择隐含地决定了我们铜鼓哦估计所能够发现的数据模式，例如稀疏性或非线性的程度和类型。鉴于典型资产定价问题中信噪比非常低的特点，想尝试不施加任何假设，仅仅依靠数据发声并以完全自动和数据驱动的方式解决上述问题是不切实际的。
+
+因此，在将机器学习方法应用于资产定价问题时，我们需要一个能够将必要的经济学推理引入机器学习方法使用过程之中的分析框架。下一张将要介绍的方法在这个方向上取得了一些有益的发展。与本章所考察的历史收益率作为预测变量这个简单例子不同，下一张会使用更广泛的公司特征作为预测变量。根据本章讨论的要点，下一张将会考虑到协方差矩阵对投资组合风险收益特征的影响以及特征之间的交互作用。最重要的是，该方法是构建在贝叶斯分析框架之上的，这一分析框架允许我们将经济学推理融入参数估计和正则化的过程之中。
 
 ## 将监督学习视为函数逼近问题
 
+监督学习的目标是通过由Kx1维向量x表示的K个观测到的预测变量（例如一组公司特征），又称为特征，来预测结果y（例如股票价格）。我们可以将这个问题描述为使用训练数据找到如下关系中的位置函数
+
+上式将预测变量映射到结果。我们寄希望于在训练数据集之外遇到的结果来自和训练数据相同的统计模型，这样从训练数据中获得的函数估计将是一个很好的样本外预测器。
+
+监督学习可以分为两类。分类方法用于因变量y是类别变量的问题。回归方法处理因变量为连续变 量的问题。在资产定价应用中，尽管分类方法也很有用，例如用于预测公司是否违约，但是回归问题更为常见，我在本书中将重点介绍回归方法。
+
+不同的监督学习方法因它们考虑的函数类型F的区别而存在差异。一些方法适用于线性函数，此类方法是计量经济学中广泛使用的线性回归方法的变体。其他方法则适用于高度非线性函数。这些方法与计量经济学中的非参数方法类似，例如核回归方法。这些监督学习方法的共同之处在于，它们均被设计出来有效解决x包含非常多的特征的高维问题，有时特征的数量甚至超过训练数据中观测数据的数量。
+
+机器学习研究人员通常会尽量避免对f做出强有力的假设，例如假设f是线性的且x是低维的、仅包含从为数众多的潜在预测变量中事先挑选出的一小部分变量。相反，分析的目标是在关于f和预测变量集的弱假设下，尽量让数据解释函数fx的形式。然而这一想法在实际中能够走多远？人们是否有可能开发一种完全自动化的通用机器学习方法，使它在任何任意情况下（例如，无论预测问题是关于图像识别、生物医学还是资产定价）都可以仅由数据完全揭示f、从训练数据中归纳出规律并为学习算法没有看到的测试数据集提供预测？
+
+Wolpert指出这种通用学习算法并不存在。这个结果被称为机器学习中的没有免费的午餐定理。这意味着，除非我们对预测问题有一些先验的知识，否则没有理由认为一种学习算法会优于另一种学习算法。此外，如果多个算法在训练数据集上的效果同样好，我们同样无法在没有先验知识的情况下确定其中哪个算法能够在尚未见过的测试数据集上产生比其他算法更好的预测效果。因此，唯有具备了关于我们试图解决的预测问题的特定先验知识，才有可能找到一种在测试数据上依然能够产生良好预测结果的算法。在我们的监督学习框架中，这些先验知识可能是关于f所属函数类别的知识、当我们从训练数据集切换到待预测的测试数据时该函数的稳定性，以及epsilon和x的统计分布的。成功预测的前提条件是，我们在选择学习算法以及算法的实现细节时，挑选那些适合预测问题本质的算法。
+
+这个观点与本书的基本主题密切相关。为了在资产定价中成功的应用机器学习，当我们在许多可用的学习算法及其各种设定中进行选择时，需要通过某种方法将有关资产价格数据性质的知识引入其中。现成的可以被拿来解决预测问题的学习算法和设定选择数不胜数，然而它们并非都能很好的适用于资产定价中的预测问题。
+
+我们接下来简要回顾几种监督学习方法。在本章末尾以及下一张中，我们将回到核心问题，即如何将先验知识施加于学习算法之中。
+
 ## 回归方法
+
+回归方法在统计学和计量经济学中有着悠久的传统。这些技术在许多机器学习应用中的新颖之处体现在对这些方法的微调，以使它们在高维环境和可能的高度非线性问题中表现良好，表现良好体现在它们在计算上可行以及具备优秀的预测性能。
+
+我们首先回顾线性模型。相比于金融领域之外的其他机器学习典型应用，线性模型能够在资产定价中发挥更加重要的作用，而我们会在第3章中详细讨论背后的原因。此外，线性模型实际上会比他么看上去更加灵活。通过对预测变量的非线性变换，线性模型便可以轻松地纳入不同类型的非线性关系。
+
+### 线性方法：岭回归和Lasso
+
+在一个线性回归模型中，我们假设函数fx是线性的，即
+
+其中g代表未知回归系数向量，虽然从y和x元素之间的关系来看该模型使线性的，但是向量x中可以包含预测变量的非线性变换。
+
+我们将在本书中反复提到的一种非线性变换设计变量之间的交互作用。从一个原始的2x1维特征向量。除了原始解释变量外，它还包含交乘项，以此在回归中捕捉两个原始特征之间的交互作用。
+
+下面假设训练集中有N个观测值，我们将它们堆叠成Nx1维向量
+
+### 树方法和随机森林
+
+### 神经网络
 
 ## 超参数调优
 
 ## 贝叶斯解释
 
 # 资产定价中的监督学习
+
+第2章所回顾的监督机器学习方法为人们进一步研究资产定价提供了有力的工具。在资产定价领域，有着许多高维预测的场景，在这些研究问题中可以提供有效预测信息的预测变量为数众多。比如，在股票收益率预测问题中，许多变量都有可能是潜在的预测变量。公司财务报表中的公司特征，从信息披露的文本信息中提取的信息，汇总股票历史价格和交易量信息的变量，欣慰媒体所报道中包含的信息，以及其他可能与公司相关的变量都有可能包含有预测信息。
+
+到目前为止，为了应对上述高维数问题，资产定价方面的大部分已有文献均在预测模型中施加了特设的稀疏性假设。学者们通常不会同时考虑大量的预测变量，而是孤立的考虑一小部分预测变量。比如，当学者们研究一个新的预测变量时，通常的做法是检验该变量是否在控制了少数几个基准公司特征之后依然能够提供预测信息，作为基准的公司特征例子包括这两个多因子模型中所使用的变量市值 账面市值比 投资 盈利水平。然而，这种不同文献孤立地考察少数预测变量所存在的问题是，它们发现预测变量之间可能包含了许多冗余信息。
+
+上述传统研究方法中施加的特设稀疏性背后并没有令人信服的经济学理论依据。因此，我们需要在不施加模型稀疏性假设的前提下来应对预测中的高维数问题的新方法。机器学习方法非常适合来解决这个问题，但直接照搬现成的机器学习方法到资产定价领域可能并不能完全发挥其真正的高维拟合能力。资产定价与那些机器学习得以发源和得到普遍应用的领域（通常是技术领域）有较大的不同。诚然，资产定价和典型的机器学习应用之间的区别并非总是那么清晰，但在很多情况下。
+
+资产定价领域与其他领域最大的不同可能在于典型数据集中信噪比的差异。在许多典型的机器学习应用中，在用以训练机器学习算法的数据中，真实结果是已知的。例如，在第一章中讨论的图像分类任务中，训练数据集中图像的真是分类是已知的。沿用第一章所讨论的例子，如果目标是将图像分为{热狗，非热狗}两类，那么我们可以使用被正确标记为“热狗”或者"非热狗“的图像作为输入数据来训练机器学习算法。作为对比，在收益率预测应用中，我们只能使用资产的已实现收益率。预测收益率是不可观测的。我们所能做的仅是将已实现收益率视为预期收益i率的一个带噪声的信号。对典型的资产收益率数据而言，从方差分解的角度来看，无论是界面上还是时序上，波动doujin]
+
+资产定价研究中可用来寻来你模型的数据量也十分有限，这进一步加剧了低信噪比的问题。资产收益率历史数据仅涵盖了过去几十年，在这个情况下，人们可能会认为，可以通过缩小计算收益率的时间窗口来获得更高频的数据，从而达到增加样本数量的目的。事实上，使用高频数据并不会帮助我们更好的估计。除非资产收益率中的可预测部分有着高频时变特征（但是不考虑市场微观结构导致的可预测型的情况下）
+
+因此，我们或多或少地接受样本量有限这一事实。
+
+
 
 ## 例子：截面股票收益率预测
 
@@ -48,7 +140,19 @@
 
 ## 监督学习视角
 
+收缩估计量
+
+稀疏性
+
+数据驱动的超参选择
+
 ## 实证分析
+
+50个异象特征的实证结果
+
+WRDS财务比例的实证结果
+
+特征之间的交互作用
 
 ## 样本外资产定价检验
 
@@ -58,11 +162,29 @@
 
 ## 资产市场
 
+投资者
+
+定价
+
+基于计量经济学的观测者视角
+
 ## 投资者学习
+
+OLS学习
+
+带有信息先验的贝叶斯学习
 
 ## 收益率可预测性
 
+样本内收益率可预见性
+
+（不存在）样本外收益率可预测性
+
 ## 扩展研究
+
+稀疏性
+
+额外的收缩和稀疏性
 
 ## 对实证研究的启示
 
@@ -70,6 +192,20 @@
 
 ## 描述投资机会的特征
 
+机器学习的经济学约束
+
+非线性
+
+结构性变化
+
 ## 资产需求分析
 
+需求系统估计
+
+预期的形成
+
 ## 机器学习的理论应用
+
+有限理性
+
+投资者的异质性
